--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,30 +1,47 @@
-body {
-	background-color: #000;
-	position: relative;
-}
-
-.webgl {
-	position: absolute;
-	z-index: 9;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
-
 * {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 html,
 body {
-	overflow: hidden;
+    overflow: hidden;
+    background-color: #ffffff;
+    position: relative;
 }
 
 .webgl {
-	position: fixed;
-	top: 0;
-	left: 0;
-	outline: none;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    outline: none;
+}
+
+.text {
+    font-family: 'Roboto', Arial, sans-serif;
+    color: red;
+    z-index: 1000;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    background-color: rgba(0, 0, 0, 0.5); /* Добавляем фон для видимости */
+    padding: 10px;
+}
+
+#text {
+    position: absolute;
+    top: 10px;
+    width: 100%;
+    text-align: center;
+    z-index: 100;
+    display:block;
+	font-family: 'Inter';
+}
+
+#root {
+    width: 100vw;
+    height: 100vh;
 }
